--- a/Server/Views/screenMessger.hbs
+++ b/Server/Views/screenMessger.hbs
@@ -232,6 +232,10 @@
       width: 100%;
       text-align: center;
     }
+
+    .display_None{
+      display: none;
+    }
   </style>
 </head>
 
@@ -313,11 +317,11 @@
         </div>
         <div class="box-order-Main">
 
-          <div id="load" class="load-Spinner">
+          <div class="load-Spinner" :class="checkStatus ? ' ' : 'display_None' ">
             <div class="spinner-border text-primary"></div>
           </div>
 
-          <div id="hienThidata" style="display: none">
+          <div id="hienThidata" :class="checkStatus ? 'display_None' : ' ' ">
             <div class="box-chat-Main">
               <div class="box-extra-chat">
                 <div class="box-All-Chat">
@@ -378,7 +382,8 @@
       },
       tinNhanMoi: 0,
       donHangMoi: 0,
-      checkInput: false
+      checkInput: false,
+      checkStatus:true
     },
     mounted() {
       const socket = io();
@@ -422,11 +427,7 @@
               });
               self.dataTitleChat = sortedData;
               self.tinNhanMoi = sortedData.filter(item => item.status === true).length
-
-              var load = document.getElementById("load")
-              var duLieu = document.getElementById("hienThidata")
-              load.style.display = "none"
-              duLieu.style.display = "block"
+              self.checkStatus = false
             })
             .catch(error => {
               console.error(error);
