--- a/Server/Views/screenWarehouse.hbs
+++ b/Server/Views/screenWarehouse.hbs
@@ -4,7 +4,7 @@
 
     <title>Kho Hàng</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="../styles.css">
+    <link rel="stylesheet" href="../../styles.css">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
@@ -91,7 +91,7 @@
             <a href="/statistic" class=" cursor-pointer mess ml-3 mt-3 w-10/12" style="text-decoration: none ">
                 <div class="flex" style=" padding: 12px;">
                     <div>
-                        <img class="w-5 h-5" src="../analytics.png" alt="">
+                        <img class="w-5 h-5" src="../../analytics.png" alt="">
                     </div>
                     <div class="mx-3 text-sm text-gray-100 ">Thống kê</div>
                 </div>
@@ -99,7 +99,7 @@
             <a href="/home" class=" cursor-pointer mess ml-3 mt-3 w-10/12" style="text-decoration: none ">
                 <div class="flex" style=" padding: 12px;">
                     <div>
-                        <img class="w-5 h-5" src="../dashboard.png" alt="">
+                        <img class="w-5 h-5" src="../../dashboard.png" alt="">
                     </div>
                     <div class="mx-3 text-sm text-gray-100 ">Đơn Hàng</div>
                 </div>
@@ -109,7 +109,7 @@
             <a href="/mess" class="cursor-pointer mess ml-3 mt-3 w-10/12" style="text-decoration: none">
                 <div class="flex" style=" padding: 12px;">
                     <div>
-                        <img class="w-5 h-5 " src="../messages.png" alt="">
+                        <img class="w-5 h-5 " src="../../messages.png" alt="">
                     </div>
                     <div class="mx-3 text-sm text-gray-100 ">Tin Nhắn</div>
                 </div>
@@ -117,7 +117,7 @@
           <a href="/notifications" class="cursor-pointer mess ml-3 mt-3 w-10/12" style="text-decoration: none">
             <div class="flex" style=" padding: 12px;">
               <div>
-                <img class="w-5 h-5" src="../notifications.png" alt="">
+                <img class="w-5 h-5" src="../../notifications.png" alt="">
               </div>
               <div class="mx-3 text-sm text-gray-100">Thông báo</div>
             </div>
@@ -125,7 +125,7 @@
           <a href="/customer" class="cursor-pointer mess ml-3 mt-3 w-10/12" style="display: flex; text-decoration: none">
             <div class="flex" style="padding: 12px;">
               <div>
-                <img class="w-5 h-5 " src="../iconuser.png" alt="">
+                <img class="w-5 h-5 " src="../../iconuser.png" alt="">
               </div>
               <div class="mx-3 text-sm text-gray-100 ">Quản Lý người dùng</div>
             </div>
@@ -134,7 +134,7 @@
                 style="border-bottom-width: 1px; text-decoration: none">
                 <div class="flex" style=" padding: 12px;">
                     <div>
-                        <img class="w-5 h-5" src="../kho.svg" alt="">
+                        <img class="w-5 h-5" src="../../kho.svg" alt="">
                     </div>
                     <div class="mx-3 text-sm text-gray-100">Kho Hàng</div>
                 </div>
@@ -150,7 +150,7 @@
 
                 <div class="bg-white px-2 py-0.5 h-18 flex">
                     <div class="left md:w-3/4 sm:w-1/3 flex p-3">
-                        <img src="../person.png" class="w-10 h-10" alt="">
+                        <img src="../../person.png" class="w-10 h-10" alt="">
                         <span class="block p-2">Admin</span>
                     </div>
                     <div class="right md:w-1/4 sm:w-2/3 flex  justify-content-end ">
@@ -166,7 +166,7 @@
                 <div class="card w-full">
                     <div class="card-header">
                         <div class="dropdown">
-                            <button class="btn btn-outline-secondary dropdown-toggle float-left" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <button class="btn btn-outline-secondary dropdown-toggle float-left" style="width: 80px;" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 {{#if category}}
                                     {{category}}
                                 {{else}}
@@ -183,15 +183,21 @@
 
                         <div class="dropdown" >
                             <button class="btn btn-outline-secondary dropdown-toggle float-left" type="button" data-bs-toggle="dropdown" aria-expanded="false" style="margin-left:10px; width: 160px;">
-                                {{#if }}
-                                    {{}}
+                                {{#if sortName}}
+                                    {{sortName}}
                                 {{else}}
                                     Giá&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
                                 {{/if}}
                             </button>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Giá: Thấp đến Cao</a></li>
-                                <li><a class="dropdown-item" href="#">Giá: Cao đến Thấp</a></li>
+                                {{#if cate}}
+                                    <li><a class="dropdown-item" href="/warehouse/{{cate}}/lowtohight">Giá: Thấp đến Cao</a></li>
+                                    <li><a class="dropdown-item" href="/warehouse/{{cate}}/highttolow">Giá: Cao đến Thấp</a></li>
+                                {{else}}
+                                    <li><a class="dropdown-item" href="/warehouse/all/lowtohight">Giá: Thấp đến Cao</a></li>
+                                    <li><a class="dropdown-item" href="/warehouse/all/highttolow">Giá: Cao đến Thấp</a></li>
+                                {{/if}}
+                                
                             </ul>
                         </div>
 
